# Ferro

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT_ARCHITECTURE.md  PROJECT_STRUCTURE.txt  PYTHON_BINDING.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  job.gjf
.claude-memory/: MEMORY.md  feedback_comment_language.md  feedback_memory_sensitive.md  feedback_sync_memory.md  feedback_wait_for_go.md  project_state.md  user_profile.md
docs/: book.toml
docs/book/html/: 404.html  cli-reference.html  data-model.html  index.html  installation.html  print.html  searcher-c2a407aa.js  searchindex-28acadd8.js  toc-51ae9713.js  toc.html
docs/book/html/analysis/: angle.html  cube-density.html  cube-jump.html  cube-radius.html  cube-sdf.html  gr.html  msd.html  rotcorr.html  sq.html  vacf.html  vanhove.html
docs/book/pandoc/pdf/src/: cli-reference.md  data-model.md  installation.md  introduction.md  part-1-Core-Data-Model.md  part-2-Analysis-Methods.md  part-3-Reference.md
docs/book/pandoc/pdf/src/analysis/: angle.md  cube-density.md  cube-jump.md  cube-radius.md  cube-sdf.md  gr.md  msd.md  rotcorr.md  sq.md  vacf.md  vanhove.md
docs/src/: SUMMARY.md  cli-reference.md  data-model.md  installation.md  introduction.md
docs/src/analysis/: angle.md  cube-density.md  cube-jump.md  cube-radius.md  cube-sdf.md  gr.md  msd.md  rotcorr.md  sq.md  vacf.md  vanhove.md
examples/: water.cif
ferro-analysis/: Cargo.toml
ferro-analysis/src/: geometry.rs  lib.rs  properties.rs  trajectory_analysis.rs
ferro-analysis/src/md/: angle.rs  cube_density.rs  cube_jump.rs  cube_radius.rs  cube_sdf.rs  gr.rs  mod.rs  msd.rs  rotcorr.rs  sq.rs  vacf.rs  vanhove.rs
ferro-analysis/src/network/: cn.rs  ligand_class.rs  mod.rs  qn.rs
ferro-cli/: Cargo.toml
ferro-cli/src/: help.rs  io_dispatch.rs  lib.rs  main.rs  plot.rs
ferro-cli/src/args/: cube.rs  traj.rs
ferro-core/: Cargo.toml
ferro-core/src/: atom.rs  cell.rs  cube_data.rs  error.rs  frame.rs  lib.rs  trajectory.rs
ferro-core/src/data/: compounds.rs  mod.rs
ferro-io/: Cargo.toml
ferro-io/src/readers/: cif.rs  cp2k.rs  cube.rs  extxyz.rs  lammps_data.rs  lammps_dump.rs  mod.rs  pdb.rs  qe.rs  vasp.rs  xyz.rs
ferro-io/src/writers/: cif.rs  cube.rs  extxyz.rs  lammps_data.rs  lammps_dump.rs  pdb.rs  qe.rs  vasp.rs  xyz.rs
ferro-python/: Cargo.toml  pyproject.toml
ferro-python/src/: lib.rs
ferro-structure/: Cargo.toml
ferro-structure/src/: lib.rs  supercell.rs
ferro-workflow/: Cargo.toml
ferro-workflow/src/: job_builder.rs  lib.rs
molflow-analysis/: Cargo.toml
molflow-analysis/src/: geometry.rs  lib.rs  properties.rs  trajectory_analysis.rs
molflow-analysis/src/md/: angle.rs  cube_density.rs  gr.rs  mod.rs  msd.rs  rotcorr.rs  scattering_data.rs  sq.rs  vacf.rs  vanhove.rs
molflow-analysis/src/network/: cn.rs  ligand_class.rs  mod.rs  qn.rs
molflow-cli/: Cargo.toml
molflow-cli/src/: help.rs  io_dispatch.rs  lib.rs  main.rs
molflow-cli/src/args/: common.rs  corr.rs  cube.rs  mod.rs  traj.rs
molflow-core/: Cargo.toml
molflow-core/src/: atom.rs  frame.rs  lib.rs  molecule.rs  trajectory.rs  units.rs
molflow-core/src/data/: compounds.rs
molflow-io/: Cargo.toml
molflow-io/src/: lib.rs
molflow-io/src/readers/: cif.rs  cp2k.rs  cube.rs  extxyz.rs  lammps_data.rs  lammps_dump.rs  mod.rs  pdb.rs  qe.rs  vasp.rs  xyz.rs
molflow-io/src/writers/: cif.rs  cube.rs  extxyz.rs  lammps_data.rs  lammps_dump.rs  mod.rs  pdb.rs  qe.rs  vasp.rs  xyz.rs
molflow-python/: Cargo.toml
molflow-python/src/: lib.rs
molflow-workflow/: Cargo.toml
molflow-workflow/src/: job_builder.rs
nexflux-analysis/: Cargo.toml
nexflux-analysis/src/: geometry.rs  lib.rs  properties.rs  trajectory_analysis.rs
nexflux-analysis/src/md/: angle.rs  cube_density.rs  cube_jump.rs  cube_radius.rs  cube_sdf.rs  gr.rs  mod.rs  msd.rs  rotcorr.rs  sq.rs  vacf.rs  vanhove.rs
nexflux-analysis/src/network/: cn.rs  ligand_class.rs  mod.rs  qn.rs
nexflux-cli/: Cargo.toml
nexflux-cli/src/: help.rs  io_dispatch.rs  main.rs
nexflux-cli/src/args/: cube.rs  traj.rs
nexflux-core/: Cargo.toml
nexflux-core/src/: cell.rs  cube_data.rs  error.rs  frame.rs  lib.rs  molecule.rs  trajectory.rs  units.rs
nexflux-core/src/data/: compounds.rs  elements.rs
nexflux-io/: Cargo.toml
nexflux-io/src/readers/: cif.rs  cp2k.rs  cube.rs  extxyz.rs  lammps_data.rs  lammps_dump.rs  pdb.rs  qe.rs  vasp.rs  xyz.rs
nexflux-io/src/writers/: cif.rs  cube.rs  extxyz.rs  lammps_data.rs  lammps_dump.rs  mod.rs  pdb.rs  qe.rs  vasp.rs  xyz.rs
nexflux-python/: Cargo.toml  pyproject.toml
nexflux-python/src/: lib.rs
nexflux-workflow/: Cargo.toml
nexflux-workflow/src/: job_builder.rs  templates.rs
