[package]
name = "ferro-analysis"
version.workspace = true
edition.workspace = true

[dependencies]
ferro-core = { path = "../ferro-core" }
nalgebra = { workspace = true, features = ["serde-serialize"] }
ndarray.workspace = true
rayon.workspace = true
thiserror.workspace = true
petgraph.workspace = true
