[package]
name = "molflow"
version.workspace = true
edition.workspace = true

[[bin]]
name = "molflow"
path = "src/main.rs"

[dependencies]
molflow-core = { path = "../molflow-core" }
molflow-io = { path = "../molflow-io" }
molflow-analysis = { path = "../molflow-analysis" }
molflow-workflow = { path = "../molflow-workflow" }
clap = { version = "4.5", features = ["derive"] }
anyhow.workspace = true
