[package]
name = "molflow"
version.workspace = true
edition.workspace = true

[lib]
name = "molflow"
path = "src/lib.rs"

[[bin]]
name = "molflow"
path = "src/main.rs"

[[bin]]
name = "mol-convert"
path = "src/bin/convert.rs"

[[bin]]
name = "mol-info"
path = "src/bin/info.rs"

[[bin]]
name = "mol-job"
path = "src/bin/job.rs"

[[bin]]
name = "mol-traj"
path = "src/bin/traj.rs"

[[bin]]
name = "mol-corr"
path = "src/bin/corr.rs"

[[bin]]
name = "mol-cube"
path = "src/bin/cube.rs"

[[bin]]
name = "mol-network"
path = "src/bin/network.rs"

[dependencies]
molflow-core     = { path = "../molflow-core" }
molflow-io       = { path = "../molflow-io" }
molflow-analysis = { path = "../molflow-analysis" }
molflow-workflow = { path = "../molflow-workflow" }
clap             = { version = "4.5", features = ["derive"] }
rust_xlsxwriter  = "0.80"
anyhow.workspace = true
rayon.workspace  = true
