[package]
name = "molflow-python"
version.workspace = true
edition.workspace = true

[lib]
name = "molflow"
crate-type = ["cdylib"]

[dependencies]
molflow-core = { path = "../molflow-core" }
molflow-io = { path = "../molflow-io" }
molflow-analysis = { path = "../molflow-analysis" }
pyo3 = { version = "0.20", features = ["extension-module"] }
