[package]
name = "nexflux-analysis"
version.workspace = true
edition.workspace = true

[dependencies]
nexflux-core = { path = "../nexflux-core" }
nalgebra = { workspace = true, features = ["serde-serialize"] }
ndarray.workspace = true
rayon.workspace = true
thiserror.workspace = true
petgraph.workspace = true
