[package]
name = "nexflux"
version.workspace = true
edition.workspace = true

[lib]
name = "nexflux"
path = "src/lib.rs"

[[bin]]
name = "nexflux"
path = "src/main.rs"

[[bin]]
name = "nex-convert"
path = "src/bin/convert.rs"

[[bin]]
name = "nex-info"
path = "src/bin/info.rs"

[[bin]]
name = "nex-job"
path = "src/bin/job.rs"

[[bin]]
name = "nex-traj"
path = "src/bin/traj.rs"

[[bin]]
name = "nex-corr"
path = "src/bin/corr.rs"

[[bin]]
name = "nex-cube"
path = "src/bin/cube.rs"

[[bin]]
name = "nex-network"
path = "src/bin/network.rs"

[dependencies]
nexflux-core     = { path = "../nexflux-core" }
nexflux-io       = { path = "../nexflux-io" }
nexflux-analysis = { path = "../nexflux-analysis" }
nexflux-workflow = { path = "../nexflux-workflow" }
clap             = { version = "4.5", features = ["derive"] }
rust_xlsxwriter  = "0.80"
anyhow.workspace = true
rayon.workspace  = true
