[package]
name = "nexflux-python"
version.workspace = true
edition.workspace = true

[lib]
name = "nexflux"
crate-type = ["cdylib"]

[dependencies]
nexflux-core = { path = "../nexflux-core" }
nexflux-io = { path = "../nexflux-io" }
nexflux-analysis = { path = "../nexflux-analysis" }
pyo3 = { version = "0.20", features = ["extension-module"] }
